[package]
name = "ritekv"
version = "0.0.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/ritedb/ritekv"
description = "RiteKV, A key-value store written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
griddle = { version = "0.4.1", default-features = false, features = ["inline-more"], optional = true }
parking_lot = "0.11.1"
seahash = "4.0.1"

[features]
default = ["amortized"]

amortized = ["griddle"]
